footer, styles og meira komið

--- a/src/Styles/page.module.scss
+++ b/src/Styles/page.module.scss
@@ -1,3 +1,5 @@
 @use './frontPage.scss';
-@use './almennt.scss';
 @use './nav.scss';
+@use './almennt.scss';
+@use './footer.scss';
+@use './article.scss';
