--- a/src/Styles/globals.scss
+++ b/src/Styles/globals.scss
@@ -4,10 +4,81 @@
   box-sizing: border-box;
 }
 
+:root {
+  --font-mono: Menlo, Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono', 'Courier New', Courier,
+    monospace;
+  --font-serif: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
+  --font-sans: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
+  --color-text-1: #000000;
+  --color-text-2: #1a1a1a;
+  --color-background-1: #ffffff;
+  --color-background-2: #f6f8fa;
+  --color-background-3: #e5e7eb;
+  --color-accent: #d9450c;
+  --color-background-accent: #f4cf58;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+ul {
+  list-style: none;
+}
+
+body {
+  margin: 0 auto;
+  max-width: 750px;
+  padding: 2rem;
+  border-radius: 6px;
+  overflow-x: hidden;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  background: var(--color-background-1);
+  color: var(--color-text-2);
+  font-size: 1.1rem;
+  line-height: 1.5;
+  font-family: var(--font-sans);
+}
+
 header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   padding: 2rem;
+  border-bottom: solid 1px #b3b0b0;
+  margin-bottom: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1;
+  color: var(--color-text-1);
+  padding-top: 0.875rem;
+  margin-bottom: 1rem;
+
+  & > a:only-child {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    position: relative;
+
+    &:before {
+      position: absolute;
+      right: 100%;
+      margin-right: 10px;
+      opacity: 0.2;
+    }
+
+    &:hover:before {
+      opacity: 0.4;
+    }
+  }
 }
 
 header h1 {
@@ -20,9 +91,13 @@ a {
   color: #000;
 }
 
-@media (max-width: 730px) {
-  header {
-    flex-direction: column;
-    place-self: center;
-  }
+img,
+mux-player {
+  max-width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow:
+    0px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    0px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    0px 100px 80px rgba(0, 0, 0, 0.07);
 }
