--- a/src/Styles/page.module.scss
+++ b/src/Styles/page.module.scss
@@ -1,5 +1,6 @@
+@use './html.scss';
 @use './frontPage.scss';
 @use './nav.scss';
-@use './almennt.scss';
 @use './footer.scss';
 @use './article.scss';
+@use './avatar.scss';
