--- a/src/Styles/globals.scss
+++ b/src/Styles/globals.scss
@@ -28,7 +28,7 @@ ul {
 
 body {
   margin: 0 auto;
-  max-width: 750px;
+  max-width: 1200px;
   padding: 2rem;
   border-radius: 6px;
   overflow-x: hidden;
@@ -91,13 +91,19 @@ a {
   color: #000;
 }
 
-img,
-mux-player {
-  max-width: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow:
-    0px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-    0px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-    0px 100px 80px rgba(0, 0, 0, 0.07);
+// img,
+// mux-player {
+//   max-width: 100%;
+//   border-radius: 10px;
+//   overflow: hidden;
+//   box-shadow:
+//     0px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+//     0px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+//     0px 100px 80px rgba(0, 0, 0, 0.07);
+// }
+
+@media (max-width: 480px) {
+  header h1 {
+    font-size: 3rem;
+  }
 }
